Fix layout post div will be wrapped around sidebar if it does not fit

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -224,6 +224,10 @@
 .post-content {
   margin-bottom: $spacing-unit;
 
+  .post {
+    margin-top: 20px;
+  }
+
   h2 {
     @include relative-font-size(2);
 
